# MIR-Competition-2024

./: LICENSE  README.md
glassy_challenge/: package.xml  setup.cfg  setup.py
glassy_challenge/glassy_challenge/: glassy_challenge.py
glassy_msgs/: CMakeLists.txt  README.md  package.xml
glassy_msgs/msg/: Actuators.msg  InnerLoopReferences.msg  MissionInfo.msg  PathReferences.msg  State.msg
glassy_msgs/srv/: LosParams.srv  PidGains.srv  SetLimits.srv  SetMission.srv  SetPath.srv
glassy_px4_manager/: CMakeLists.txt  README.md  package.xml
glassy_px4_manager/config/: params.yaml
glassy_px4_manager/launch/: glassy_px4_manager.launch.py
glassy_px4_manager/src/: StateManager.cpp  StateManager.h  mission_types.h
glassy_px4_state_manager/: CMakeLists.txt
glassy_px4_state_manager/config/: params.yaml
glassy_px4_state_manager/src/: StateManager.h  main.cpp
glassy_utils/: CMakeLists.txt  package.xml
glassy_utils/include/glassy_utils/: GlassyGeneralUtils.h
glassy_utils/include/transforms/: glassy_transforms.h
glassy_utils/src/: GlassyGeneralUtils.cpp  glassy_transforms.cpp
