<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>glassy_px4_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joao.lehodey@gmail.com">joaolehodey</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>glassy_msgs</depend>
  <depend>Eigen3</depend>
  
  <depend>glassy_interfaces</depend>
  <exec_depend>ros2launch</exec_depend>
  


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
